project3-nodejs/K8s-manifest/mongodb-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mangodb-deployment
  namespace: dashoboard-demo
  labels:
    app: mangodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mangodb
  template:
    metadata:
      labels:
        app: mangodb
    spec:
      containers:
        - name: mongodb
          image: mongo:8.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage
              mountPath: /data/db
      volumes:
      - name: mongodb-storage
        persistentVolumeClaim:
          claimName: mongodb-pvc
