project3-nodejs/K8s-manifest/mongodb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  mongodb-service
  namespace: dashoboard-demo
spec:
  selector:
    app: mangodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
  type: ClusterIP
