project3-nodejs/K8s-manifest/nodejs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name:  nodejs-service
  namespace: dashoboard-demo
spec:
  selector:
    app: nodejs
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: ClusterIP
