project3-nodejs/K8s-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: dashboard-ingress
  namespace: dashoboard-demo

spec:

  ingressClassName: nginx

  rules:

  - host: dashboard.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: nodejs-service

            port:

              number: 80
